# ActionFlow

./: .gitignore  ActionFlow.ipynb  CLAUDE.md  README.md  download_kth.sh  pyproject.toml
.claude/: settings.json
.claude/agents/: cv-debugger.md  ml-experimenter.md  model-optimizer.md
.claude/rules/: gradio-ui.md  optical-flow.md  pytorch-training.md
.claude/skills/test-pipeline/: SKILL.md
src/actionflow/: __init__.py  cli.py  config.py
src/actionflow/data/: __init__.py  dataset.py  flow.py  frames.py
src/actionflow/evaluation/: __init__.py  evaluator.py
src/actionflow/models/: __init__.py  resnet_flow.py
src/actionflow/training/: __init__.py  metrics.py  trainer.py
src/actionflow/utils/: __init__.py  device.py  seed.py  viz.py
src/configs/: __init__.py  loader.py  schema.py
src/configs/defaults/: demo.json  train.json
src/demo/: __init__.py  analysis.py  app.py
src/evaluation/: __init__.py  benchmark.py
src/flow/: __init__.py  base.py  farneback.py  lucas_kanade.py  raft.py
src/models/: __init__.py  base.py  factory.py
src/representations/: __init__.py  base.py
src/scripts/: __init__.py  cli.py
src/training/: __init__.py  pipeline.py
src/utils/: __init__.py  device.py  logging.py  runtime.py
tests/: __init__.py  test_cli.py  test_config.py  test_config_loader.py  test_dataset.py  test_demo_analysis.py  test_device.py  test_flow.py  test_metrics.py  test_model.py  test_pipeline.py  test_smoke.py  test_trainer.py
