[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "actionflow"
version = "0.2.0"
description = "Optical flow-based human action recognition on KTH Actions."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "opencv-python>=4.9",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pandas>=2.2",
    "torch>=2.2",
    "torchvision>=0.17",
    "tqdm>=4.66",
    "scikit-learn>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.11",
]
notebook = [
    "notebook>=7.2",
    "ipykernel>=6.29",
]

[project.scripts]
actionflow = "actionflow.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
